# agentloom

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  start_workflow.py  worker.py
.flox/: env.json
.flox/env/: manifest.toml
activities/: openai_responses.py
deploy/docker/: Dockerfile
deploy/k8s/base/: configmap.yaml  kustomization.yaml  secret.example.yaml  worker-deployment.yaml  worker-metrics-service.yaml
deploy/k8s/overlays/dev/: kustomization.yaml  namespace.yaml  worker-patch.yaml
deploy/k8s/overlays/prod/: kustomization.yaml  namespace.yaml  pdb.yaml  worker-patch.yaml
docs/: README.md  architecture.md  e2e-testing.md  roadmap.md
docs/deployment/: kubernetes.md
docs/services/: activities.md  evals.md  flox.md  grafana.md  langfuse.md  loki.md  prometheus.md  sandbox.md  temporal.md  worker.md  workflows.md
evals/: __init__.py  custom_evaluators.py  golden_loom.jsonl  golden_loom_smoke.jsonl  loom_brief.yaml  loom_brief_smoke.yaml  loom_task.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx
observability/: alloy.alloy  loki.yml  prometheus.yml  promtail.yml
observability/langfuse/: .env.example  docker-compose.yml
src/agentloom/: __init__.py  cli.py  config.py  tracing.py  worker.py
src/agentloom/activities/: __init__.py  llm.py
src/agentloom/agents/: __init__.py  catalog.py
src/agentloom/api/: main.py  serve.py  temporal_client.py
src/agentloom/memory/: __init__.py
src/agentloom/sandbox/: __init__.py  activities.py  handle.py  types.py  workflow.py
src/agentloom/skills/: __init__.py
src/agentloom/tools/: __init__.py
src/agentloom/workflows/: __init__.py  chat.py  hello_world.py  loom.py  sandbox_demo.py
tests/: test_activities.py  test_chat_workflow.py  test_sandbox.py  test_tracing.py  test_workflows.py
workflows/: hello_world_workflow.py  loom_workflow.py
(+5 files in other folders)
