[project]
name = "agentloom"
version = "0.1.0"
description = "Durable multi-agent workflows woven together with Temporal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.9.0",
    "openai>=1.60.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
