[project]
name = "agentloom"
version = "0.1.0"
description = "Durable multi-agent workflows woven together with Temporal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.9.0",
    "pydantic>=2.0",
    "httpx>=0.28.0",
    "langfuse>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["workflows", "activities"]
py-modules = ["worker", "start_workflow"]
